--- a/css/main.css
+++ b/css/main.css
@@ -395,6 +395,7 @@ summary {
 
 .page-header .container {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   min-height: 60px;
 }
@@ -416,7 +417,6 @@ summary {
 /*logo*/
 @media screen and (min-width: 1200px) {
   .page-header .Logo {
-    /*margin-left: auto;*/
     margin-right: 93px;
     padding-top: 24px;
     padding-bottom: 25px;
@@ -426,7 +426,6 @@ summary {
 
 @media screen and (min-width: 768px) {
   .page-header .Logo {
-    /*margin-left: auto;*/
     margin-right: 88px;
     margin-bottom: 0px;
     padding-top: 26px;
@@ -441,22 +440,28 @@ summary {
     width: 100%;
     top: 0;
     left: 0;
-    justify-content: space-between;
     background-color: #ffffff;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: #ececec;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .page-header {
+    height: 60px;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .page-header.container {
+  .page-header .container {
     min-height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 }
 
-/*@media screen and (min-width: 1200px) {
-  .page-header.container {
-    @include center-flex(space-between);
-  }
-}*/
 /*button*/
 .menu-button {
   display: inline-flex;
@@ -505,7 +510,7 @@ summary {
 /*div*/
 @media screen and (max-width: 767px) {
   .menu-container {
-    background-color: #fff;
+    background-color: #ffffff;
     padding: 60px;
     text-align: center;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
@@ -602,8 +607,10 @@ summary {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.list-link:hover,
-.list-link:focus,
+.list-link:hover, .list-link:focus {
+  color: #2196f3;
+}
+
 .list-link.current {
   color: #2196f3;
 }
@@ -634,7 +641,7 @@ summary {
 /*ul*/
 .header-contacts {
   padding: 0px;
-  margin-top: 0px;
+  margin: 0px;
 }
 
 /*ul*/
@@ -644,32 +651,21 @@ summary {
   }
 }
 
-.header-contacts {
-  padding: 0px;
-}
-
 @media screen and (min-width: 768px) {
   .header-contacts {
     display: flex;
     flex-wrap: wrap;
-    margin: 0px;
+    margin-left: 84px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .header-contacts {
-    margin-right: auto;
-    margin-left: 0px;
+    margin-left: 305px;
   }
 }
 
 /*li*/
-@media screen and (min-width: 1200px) {
-  .contacts-item {
-    display: flex;
-  }
-}
-
 @media screen and (max-width: 767px) {
   .contacts-item:not(:last-child) {
     margin-bottom: 16px;
@@ -685,7 +681,6 @@ summary {
 @media screen and (min-width: 1200px) {
   .contacts-item:not(:last-child) {
     margin-right: 30px;
-    margin-right: auto;
   }
 }
 
@@ -704,15 +699,8 @@ summary {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contacts-link:hover,
-.contacts-link:focus {
+.contacts-link:hover, .contacts-link:focus {
   color: #2196f3;
-}
-
-@media screen and (max-width: 767px) {
-  .contacts-link {
-    justify-content: center;
-  }
 }
 
 @media screen and (min-width: 768px) {
@@ -725,32 +713,17 @@ summary {
   .contacts-link {
     padding-top: 32px;
     padding-bottom: 32px;
-    justify-content: space-between;
     font-size: 14px;
   }
 }
 
 /*svg*/
 .contacts-icon {
-  width: 16px;
-  height: 12px;
-  margin-right: 10px;
-  fill: currentColor;
-}
-
-.contacts-icon {
-  margin-right: 10px;
   padding: 0px;
+  margin-right: 10px;
   fill: currentColor;
 }
 
-/*
-.contacts-icon {
-  width: 10px;
-  height: 16px;
-  margin-right: 10px;
-  fill: currentColor;
-}*/
 .Logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -759,18 +732,20 @@ summary {
   letter-spacing: 0.03em;
 }
 
+/*section*/
 .main-hero {
   padding-bottom: 118px;
   padding-top: 118px;
   text-align: center;
 }
 
+/*
 @media screen and (max-width: 767px) {
   .main-hero {
     margin-top: 60px;
   }
 }
-
+*/
 @media screen and (min-width: 1200px) {
   .main-hero {
     padding-bottom: 200px;
@@ -779,7 +754,7 @@ summary {
 }
 
 .main-hero {
-  background-color: #2f303a;
+  background-color: #212121;
   height: 400px;
   max-width: 480px;
   background-position: center;
@@ -830,7 +805,6 @@ summary {
 
 /*h1*/
 .hero {
-  margin: 0px;
   margin-bottom: 30px;
   color: #ffffff;
   text-transform: uppercase;
@@ -842,8 +816,7 @@ summary {
 
 @media screen and (min-width: 1200px) {
   .hero {
-    width: 696px;
-    margin: auto;
+    margin-bottom: 30px;
     font-size: 44px;
     font-weight: 900;
     letter-spacing: 0.06em;
@@ -893,9 +866,23 @@ summary {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
+  overflow-y: scroll;
+  z-index: 100;
   transition-property: opacity;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/*
+@media screen and (max-width: 479px) {
+  .backdrop {
+    padding: 94px 5px;
+  }
+}*/
+@media screen and (max-width: 479px) {
+  .backdrop {
+    padding: 50px 15px;
+  }
 }
 
 .backdrop {
@@ -908,14 +895,37 @@ summary {
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  min-height: 581px;
-  min-width: 528px;
+  position: relative;
   padding: 40px;
+  max-width: 100%;
+  overflow-x: hidden;
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #ffffff;
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 /*button*/
@@ -985,6 +995,7 @@ summary {
 
 .form-lable {
   display: block;
+  text-align: left;
   margin-bottom: 4px;
   border: 0;
   font-weight: 400;
@@ -1164,7 +1175,7 @@ summary {
 .features-title {
   text-align: center;
   margin-bottom: 10px;
-  color: var(--title-text-color);
+  color: #212121;
   font-size: 14px;
   letter-spacing: 0.03em;
   font-weight: 700;
@@ -1230,16 +1241,17 @@ summary {
   }
 }
 
+/*p*/
 .doing-description {
   position: absolute;
   bottom: 0%;
-  display: flex;
   width: 100%;
   height: 70px;
-  align-items: center;
+  display: flex;
   justify-content: center;
-  background: rgba(47, 48, 58, 0.8);
-  color: #fff;
+  align-items: center;
+  background-color: rgba(47, 48, 58, 0.8);
+  color: #ffffff;
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
@@ -1302,7 +1314,7 @@ summary {
 .comand-link {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 @media screen and (max-width: 767px) {
@@ -1519,25 +1531,28 @@ summary {
 
 /*a*/
 .customer-link {
-  display: flex;
   width: 100%;
   height: 100%;
   border: 1px solid #afb1b8;
   border-radius: 4px;
+  display: flex;
   justify-content: center;
   align-items: center;
   color: #afb1b8;
-  transition-property: color, border;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: border;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.customer-link:hover,
-.customer-link:focus {
+.customer-link:hover, .customer-link:focus {
   border: 1px solid #2196f3;
   color: #2196f3;
 }
 
+/*svg*/
 .customer-icon {
   fill: currentColor;
 }
@@ -1642,7 +1657,14 @@ summary {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
+  color: #757575;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.address-name:hover, .address-name:focus {
+  color: #2196f3;
 }
 
 .address-name:not(:last-child) {
