--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -85,9 +85,14 @@
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
+  color: $accent-grey-color;
+  @include transition(color);
 
+  &:hover,
+  &:focus {
+    color: $title-blue-color;
+  }
+}
 .address-name:not(:last-child) {
   margin-bottom: 9px;
 }
