--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -7,8 +7,21 @@
   background-color: $accent-backdrop-color;
 
   opacity: 1;
+  overflow-y: scroll;
+  z-index: 100;
 
   @include transition(opacity);
+}
+/*
+@media screen and (max-width: 479px) {
+  .backdrop {
+    padding: 94px 5px;
+  }
+}*/
+@media screen and (max-width: 479px) {
+  .backdrop {
+    padding: 50px 15px;
+  }
 }
 .backdrop {
   z-index: 2;
@@ -18,18 +31,35 @@
   pointer-events: none;
 }
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-  min-height: 581px;
-  min-width: 528px;
+  position: relative;
   padding: 40px;
+  max-width: 100%;
+  overflow-x: hidden;
+  @include transition(transform);
 
   background-color: $white-color;
 }
+@media screen and (min-width: 480px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+  }
+}
+@media screen and (max-width: 1199px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+  }
+}
 
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
+}
 /*button*/
 .close {
   width: 30px;
@@ -88,6 +118,7 @@
 
 .form-lable {
   display: block;
+  text-align: left;
   margin-bottom: 4px;
   border: 0;
   font-weight: 400;
@@ -96,6 +127,7 @@
   letter-spacing: 0.01em;
   color: $accent-grey-color;
 }
+
 /*div*/
 .form-input {
   position: relative;
