--- a/sass/components/_comand.scss
+++ b/sass/components/_comand.scss
@@ -2,7 +2,7 @@
 .main-comand {
   padding-bottom: 60px;
   padding-top: 60px;
-  background-color: #f5f4fa;
+  background-color: $accent-grayish-color;
   text-align: center;
 }
 
@@ -48,7 +48,7 @@
 .comand-link {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  background-color: #fff;
+  background-color: $white-color;
 }
 
 @media screen and (max-width: 767px) {
@@ -111,7 +111,7 @@
 /*h3*/
 .card-title {
   margin-bottom: 10px;
-  color: #212121;
+  color: $text-black-color;
   font-size: 16px;
   font-weight: 500;
   letter-spacing: 0.03em;
@@ -120,7 +120,7 @@
 /*p*/
 .card-description {
   margin-bottom: 16px;
-  color: #757575;
+  color: $accent-grey-color;
   font-size: 16px;
   letter-spacing: 0.03em;
   text-transform: capitalize;
