--- a/sass/components/_doing.scss
+++ b/sass/components/_doing.scss
@@ -31,17 +31,15 @@
     font-size: 36px;
   }
 }
-
+/*p*/
 .doing-description {
   position: absolute;
   bottom: 0%;
-  display: flex;
   width: 100%;
   height: 70px;
-  align-items: center;
-  justify-content: center;
-  background: rgba(47, 48, 58, 0.8);
-  color: #fff;
+  @include center-flex(center);
+  background-color: $accent-text-decoretion-color;
+  color: $white-color;
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
