--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -61,7 +61,7 @@
   padding: 25px;
   margin-bottom: 30px;
   text-align: center;
-  background-color: #f5f4fa;
+  background-color: $accent-grayish-color;
 }
 
 .features-icon {
@@ -72,7 +72,7 @@
 .features-title {
   text-align: center;
   margin-bottom: 10px;
-  color: var(--title-text-color);
+  color: $text-black-color;
   font-size: 14px;
   letter-spacing: 0.03em;
   font-weight: 700;
@@ -89,7 +89,7 @@
 .features-description {
   margin-bottom: 0px;
   margin-top: 0px;
-  color: #757575;
+  color: $accent-grey-color;
   font-size: 14px;
   font-weight: 400;
   letter-spacing: 0.03em;
