--- a/css/main.css
+++ b/css/main.css
@@ -873,12 +873,6 @@ summary {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/*
-@media screen and (max-width: 479px) {
-  .backdrop {
-    padding: 94px 5px;
-  }
-}*/
 @media screen and (max-width: 479px) {
   .backdrop {
     padding: 50px 15px;
@@ -1056,6 +1050,12 @@ summary {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
+}
+
+@media screen and (max-width: 1199px) {
+  .checkbox-label {
+    font-size: 12px;
+  }
 }
 
 .checkbox-label::before {
